--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .wrapper{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    height: 100vh;
+    height: 90vh;
+    margin: 5vh;
 }
