--- a/src/components/Country/Country.css
+++ b/src/components/Country/Country.css
@@ -2,7 +2,7 @@
     display: block;
     color: #666;
     text-decoration: none;
-    margin: 0.7rem;
+    margin: 0.4rem 0;
     padding: 0.2rem;
     transition: 0.1s
 }
@@ -12,3 +12,8 @@
     background: #f0f0f0;
 }
 
+.country__list{
+    height: 100%;
+    min-width: 300px;
+    max-width: 100vw;
+}
