--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -3,34 +3,90 @@
     flex-direction: column;
     padding: 4rem;
     box-shadow: 0 1px 1px rgba(0,0,0,0.2), 0 1px 1px rgba(0,0,0,0.2);
+    width: 450px;
 }
 
 .details__back{
-    display: block;
     color: #666;
     text-decoration: none;
-    margin: 0.7rem;
-    padding: 0.2rem;
-    transition: 0.1s
+    margin: 0.7rem 0;
+    padding: 0.5rem;
+    transition: 0.1s;
+    max-width: 60px;
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.2), 0 1px 1px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
 
+.details__title{
+    text-align: center;
+    font-size: 2rem;
+    margin: 1rem 0;
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+
+.details__subtitle{
+    text-align: center;
+    margin: 0.5rem 0;
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 1px;
 }
 
 .details__currency{
+    text-align: center;
     margin: 0.5rem 0;
+    font-size: 1rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin: 0.5rem 0;
+}
 
+.details__more{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.details__flag{
+    max-width: 300px;
+    margin: 0 auto;
+    border: 1px solid #f0f0f0;
+}
+
+.details__back:hover{
+    color: #000;
+}
+
+.details__strong{
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.details__info{
+    text-align: center;
+    margin: 0.5rem 0;
+    font-size: 1rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin: 0.5rem 0;
 }
 
 .details__more-btn{
     text-decoration: none;
     border: none;
     background: transparent;
-    color: rgb(8, 8, 104);
+    color: rgb(45, 45, 168);
+    margin: 1rem auto;
+    font-size: 1.3rem;
     text-transform: uppercase;
-    max-width: 110px;
-    font-size: 1rem;
-    margin: 0.5rem 0;
+    font-weight: 200;
+    letter-spacing: 2px;
 }
 
 .details__more-btn:hover{
     cursor: pointer;
+    color: rgb(63, 63, 160);
 }
