--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -3,16 +3,26 @@
     flex-direction: row;
 }
 
-.pagination__button{
+.pagination__li{
+    list-style-type: none;
+}
+
+.pagination__item{
     background-color: #f3f3f3;
 	border-radius: 4px;
-	border: none;
+	border: 1px transparent solid;
 	font-size: 0.8rem;
     padding: 0.5rem;
     margin: 0 0.1rem;
+    color: inherit;
+    transition: 0.1s;
 }
 
-.pagination__button:hover{
+.pagination__item--active{
+	border: 1px solid #000;
+}
+
+.pagination__item:hover{
     background-color: #ddd;
     cursor: pointer;
 }
