--- a/src/components/Country/Country.css
+++ b/src/components/Country/Country.css
@@ -2,9 +2,10 @@
     display: block;
     color: #666;
     text-decoration: none;
-    margin: 0.4rem 0;
+    margin: 0.6rem 0;
     padding: 0.2rem;
-    transition: 0.1s
+    transition: 0.1s;
+    max-width: 300px;
 }
 
 .country__item:hover{
@@ -15,9 +16,22 @@
 .country__list{
     height: 100%;
     min-width: 300px;
-    max-width: 100vw;
+    max-width: 100%;
 }
 
 .country__list-title{
     margin: 0.8rem 0 0.3rem 0;
 }
+
+.country__list-title{
+    text-transform: uppercase;
+    font-weight: 400;
+    letter-spacing: 1px;
+    margin: 0;
+}
+
+@media (max-width: 600px) {
+    .country__item{
+        margin: 0.2rem 0;
+    }
+  }
