--- a/src/components/Panel/Panel.css
+++ b/src/components/Panel/Panel.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+	margin: 0.5rem 0;
 }
 
 .panel__search-input {
@@ -10,6 +11,7 @@
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.12);
 	min-width: 300px;
     padding: 0.5rem;
+	margin: 1rem 0 0.2rem 0;
 }
 
 .panel__search-input::placeholder {
