--- a/src/components/Country/Country.css
+++ b/src/components/Country/Country.css
@@ -30,6 +30,14 @@
     margin: 0;
 }
 
+.country__info{
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin: 1rem 0;
+    color: #6b6b6b;
+    /* text-align: center; */
+}
+
 @media (max-width: 600px) {
     .country__item{
         margin: 0.2rem 0;
